syntax = "proto3";

option csharp_namespace = "UserRepoService";

package userrepo;

service UserRepo {
  rpc GetUser (GetUserRequest) returns (GetUserReply);
  rpc GetUsers(GetUsersRequest ) returns (GetUsersReply );
  rpc AddUser(AddUserRequest ) returns (AddUserReply);
}

message GetUserRequest {
  string guid = 1;
}

message GetUserReply {
  string name = 1;
  string guid = 2;
}

message GetUsersRequest {
  string restriction = 1;
}

message GetUsersReply {
  repeated string names = 1;
}

message AddUserRequest {
  string guid = 1;
  string name = 2;
  string token = 3;
}

message AddUserReply {
  bool isAdded = 1;
}
